# unameit

./: Makefile.in  README  README.demo  README.orig  acconfig.h  configure.in  krb5_files.txt  parts_list  post.mk.in  pre.mk.in  relnotes  tcl_files.txt  tcl_shared_files.txt  unisqlx_files.txt
backend/: Makefile.in  atomic_io.pl  data_files.pl  demo_pull_main.tcl  gen_aliases.pl  gen_automount.pl  gen_dhcp.pl  gen_ethers.pl  gen_group.pl  gen_hosts.pl  gen_inaddr.pl  gen_named.pl  gen_netgroup.pl  gen_netmasks.pl  gen_networks.pl  gen_pagers.pl  gen_passwd.pl  gen_printcap.pl  gen_services.pl  gen_sybase_interfaces.pl  generator.tcl  generator_dns.tcl  libtools.pl  make_sys_ph.c  pull_main.tcl  pull_main_dns.tcl  tcldump.tcl  tcldump_dns.tcl
cd/: Makefile  common.sh  install-sh  make_image  make_release  make_symlinks  mkisofsrc  psf  psf_demo
cd/cluster/: cdtoc  clustertoc  order  packagetoc
cd/copyright/: copyright.crypt  copyright.dhcp  copyright.krb5  copyright.tcl  copyright.unameit  copyright.unisql
cd/depend/: depend.ESMuclnt  depend.ESMusrv
cd/icons/: ESMtcl.icon  ESMusrv.icon
cd/pkginfo/: pkginfo.ESMdhcp  pkginfo.ESMkrb5  pkginfo.ESMtcl  pkginfo.ESMuclnt  pkginfo.ESMusrv
cd/scripts/: postinstall.ESMuclnt  postinstall.ESMusrv  preinstall.ESMuclnt  preinstall.ESMuclnt_demo  preinstall.unameit  preinstall.unameit_demo  request.ESMkrb5  request.ESMuclnt_demo  unconfigure.client  unconfigure.server
include/: Makefile.in  arith_types.c  assert.h  auth.h  common_bits.h  conn.h  conn_stream.h  error.h  ether.h  make_cbits.c  md5.h  radix.h  shared_const.h  uconfig.h  unameit_init.h  unameit_start.h  uuid.h  version.h.in  winconfig.h
libaddress/: Makefile.in  address.c
libcache_mgr/: Makefile.in  cache_mgr.tcl  init.c  makevc.tcl
libcanon/: Makefile.in  canon.tcl  init.c  makevc.tcl
libconn/: Makefile.in  auth.c  authtcl.tcl  clntcall.c  conn.c  conn_stream.c  conn_tcl.c  desmd5.c  error.c  krb4.c  krb4err.tcl  krb4tcl.tcl  krb5.c  krb5err.tcl  krb5tcl.tcl  makevc.tcl  md5.c  passwd.c  passwderr.tcl  passwdtcl.tcl  qbe_tcl.c  server.c  server.h  triverr.tcl  trivial.c  trivialtcl.tcl
libether/: Makefile.in  dlpi.c  getmac.c  main.c  nit3.c  nit4.c
libordered_list/: Makefile.in  init.c  makevc.tcl  ordered_list.tcl
libradix/: Makefile.in  radix.c
libschema_mgr/: Makefile.in  init.c  makevc.tcl  schema_mgr.tcl
libudb/: Makefile.in  convert.c  convert.h  create.c  create.h  delete.c  delete.h  dump.c  dump.h  errcode.c  errcode.h  fetch.c  fetch.h  inet.c  inet.h  init.c  init.h  license.c  license.h  lookup.c  lookup.h  metaproc.tcl  misc.c  misc.h  name_cache.c  name_cache.h  qbe.c  qbe.h  range.c  range.h  relation.c  relation.h  schema.c  schema.h  tcl_mem.c  tcl_mem.h  transaction.c  transaction.h  udbproc.tcl  update.c  (+1 more)
libuuid/: Makefile.in  uuid.c
man/man1/: Makefile.in  scicreate.1  scidelete.1  scilistattrs.1  scimatch.1  scinewuuid.1  scishow.1  sciundelete.1  sciupdate.1  unameit.1  unameit_addprincs.1  unameitcl.1  upasswd.1  upull.1  upull_mode.1
man/man1m/: Makefile.in  ubackend.1m  udumpdb.1m  unameit_deletedb.1m  unameit_hostid.1m  unameit_init.1m  unameit_makedata.1m  unameit_makedb.1m  unameit_mode.1m  unameitd.1m  uparsedb.1m  upull_mode.1m  upulld.1m
schema/: Makefile.in  compiler.tcl  decompile.tcl  memory.tcl  meta_defs.tcl  sqlx.tcl  syntax.tcl  syntax_defs.tcl  unameit_deletedb  unameit_makedb  unameit_spacedb  upgrade.sh  uuid.tcl
schema/dump/: Info.tcl
schema/dump_dns/: Info.tcl
sci/: Makefile.in  sci.tcl
scripts/: Makefile.in  TODO  cell_region.tcl  dat_to_heap.tcl  dump_common.tcl  heap.tcl  heap_to_dat.tcl  heap_to_html.tcl  load.tcl  load_adaptive.tcl  load_aliases.tcl  load_commands.tcl  load_common.tcl  load_dns.tcl  load_domains.tcl  load_generate.tcl  load_group_users.tcl  load_groups.tcl  load_gui.tcl  load_hosts.tcl  load_netgroups.tcl  load_networks.tcl  load_persons.tcl  load_running  load_services.tcl  load_setup.tcl  load_users.tcl  ndbmtcl.c  networks.tcl  rc.local.unameit  read_aliases.tcl  unameit_copy_checkpoint  unameit_env.tcl  unameit_load
ubackend/: Makefile.in  ubackend.sh
udumpdb/: Makefile.in  bootstrap.tcl  main.c
unameit/: Makefile.in  bootstrap.tcl  fancylb.tcl  main.c  makevc.tcl  menubar4.tcl  menubar8.tcl  toi.tcl  winMain.c
unameitcl/: Makefile.in  bootstrap.tcl  main.c
unameitd/: Makefile.in  bootstrap.tcl  main.c
unameitkey/: Makefile.in  bootstrap.tcl  main.c
uparsedb/: Makefile.in  bootstrap.tcl  main.c
upasswd/: Makefile.in  bootstrap.tcl  main.c  xdr_yppasswd.c  yppasswd.h
upull/: Makefile.in  bootstrap.tcl  main.c
upulld/: Makefile.in  bootstrap.tcl  main.c  pulld.h  rpc.c
util/: Makefile.in  configdb  configdb.tcl  dumpprocs  kdc.conf  krb5.conf  krb5_client.sh  krb5_server.sh  krb5kdc  makevc.tcl  tcl2c  unameit.conf  unameit_addprincs.tcl  unameit_config.tcl  unameit_etc_demo.conf  unameit_filename.tcl  unameit_makedata.tcl  unameit_mode.tcl  unameit_mode_edit.tcl  unameit_mode_gui.tcl  unameit_root.conf  unameit_setup  unameit_setup_demo  unameit_setup_kerberos5  unameit_setup_kerberos5.tcl  unameit_shared_demo.conf  unameit_start  upull_mode.tcl  wrapper.sh
win/: makevc.README  makevc.conf  makevc.tcl  makevc_procs.tcl  makevc_run.tcl  registry.c  setup.c  setup.rc  ship-krb5-bin  ship-tcl-bin  ship-tcl-lib  shortcut.c  shortcuts.tcl  textview.tcl  unameit.conf  unameit_con.c  unameit_root.conf  unameit_setup.tcl  unameit_win.c  unameit_wm.c  uwish.c  winenv.c  wizard.tcl
